--- a/src/components/Header/MenuSuperior/style.scss
+++ b/src/components/Header/MenuSuperior/style.scss
@@ -168,6 +168,20 @@ ul.nivel-tres {
       overflow-y: scroll !important;
       padding: 0 0 20px 0;
       margin-top: 30px;
+      .buttonAccount {
+        margin-bottom: 20px!important;
+       a {
+        justify-content: flex-start!important;
+        gap: 10px;
+        font-weight: 700;
+        i {
+          width: 16px;
+          height: 18px;
+          background: url('https://cdn.awsli.com.br/2454/2454272/arquivos/user.svg') center center no-repeat;
+          background-size: contain;
+        }
+       } 
+      }
       > li {
         padding: 0 10px;
         > a.menu-active {
