--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,7 +1,7 @@
 header[class="header"] {
-  width: 100vw;
-  position: fixed;
-  top: 0;
+  width: 100%;
+  position: sticky;
+  top: -50px;
   z-index: 100;
   background-color: #fff;
   box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.15);
