--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -40,7 +40,7 @@ footer.content-footer {
               font-family: $font-1;
               font-size: 13px;
               color: #000;
-              
+              font-weight: 600;
             }
           }
         }
@@ -56,7 +56,7 @@ footer.content-footer {
             font-family: $font-1;
             font-size: 13px;
             color: #000;
-            
+            font-weight: 600;
           }
         }
       }
