--- a/src/pages/404/style.scss
+++ b/src/pages/404/style.scss
@@ -37,3 +37,10 @@ $font-2: "Cinzel", serif;
 
   }
 }
+
+
+section[data-id="2a90d26b"] {
+  .elementor-shape-bottom {
+    display: none!important;
+  }
+}
