--- a/src/components/Vitrine/vitrineList.scss
+++ b/src/components/Vitrine/vitrineList.scss
@@ -60,6 +60,13 @@ $font-2: "Cinzel", serif;
             }
             .info-produto {
               padding: 0;
+              .produto-sku  {
+                display: block;
+                &:before {
+                  content: 'SKU:';
+
+                }
+              }
               a.nome-produto {
                 font-size:16px;
                 color: #000;
