--- a/src/pages/product/style.scss
+++ b/src/pages/product/style.scss
@@ -134,6 +134,29 @@ $font-2: "Cinzel", serif;
   .lista-redes {
     position: absolute;
     top: 24px;
+    ul {
+      margin-bottom: 10px!important;
+      li {
+        a {
+          &:hover {
+            i {
+              background: #2ab200!important;
+            }
+          }
+        }
+      }
+      .visible-phone {
+        display: block!important;
+      }
+      .fb-compartilhar {
+        display: none!important;
+      }
+      .fa-whatsapp {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
   }
 
   span.disp-entrega {
@@ -292,17 +315,21 @@ form.avise-me-form {
     padding: 0;
     box-shadow: 0 0 0 rgba(0, 0, 0, 0);
     #descricao {
+      margin-top: 20px;
+      text-align: center;
       &:before {
-        content: "Descrição";
+        content: "Informações do produto";
         display: block;
         font-size: 23px;
         font-weight: 700;
         color: #1e103b;
         margin-bottom: 20px;
+        text-align: center;
       }
       p {
         font-size: 14px;
         color: #000;
+        text-align: center;
       }
       p,
       span,
