--- a/src/components/Header/MenuSuperior/style.scss
+++ b/src/components/Header/MenuSuperior/style.scss
@@ -23,8 +23,8 @@ ul.nivel-um {
   > li {
     position: unset !important;
     border: 0 !important;
+    padding: 0;
     margin: 0 !important;
-    padding: 0 10px;
     &:hover {
       background-color: #eadfff !important;
       a {
@@ -34,6 +34,7 @@ ul.nivel-um {
       }
     }
     a {
+      padding: 0 10px;
       strong.titulo {
         color: #fff;
         font-family: $font-2!important;
@@ -54,7 +55,7 @@ ul.nivel-um {
         }
       }
       > ul.nivel-dois {
-        display: flex !important;
+        display: block !important;
         gap: 10px;
       }
     }
@@ -62,9 +63,9 @@ ul.nivel-um {
 }
 
 ul.nivel-dois {
-  width: 100%;
-  min-width: 100%;
-  height: 60vh;
+  left: auto!important;
+  min-width: auto!important;
+  height: 400px;
   overflow-y: scroll;
   background: rgba($color: #e3e6f8, $alpha: 0.95) !important;
   padding: 20px !important;
@@ -92,9 +93,53 @@ ul.nivel-dois {
       }
     }
     > ul.nivel-tres {
+      position: relative!important;
       width: 100%;
       position: relative;
+      display: block!important;
       left: 0;
+      ul.nivel-tres {
+        left: 0!important;
+        position: relative!important;
+        display: block!important;
+        background-color: transparent !important;
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
+        li {
+          border-color: rgba($color: #000000, $alpha: 0.2);
+          border-style: solid;
+          border-top-width: 0 !important;
+          border-right-width: 0 !important;
+          border-bottom-width: 1px !important;
+          border-left-width: 0 !important;
+          border-bottom: 1px solid rgba($color: #000000, $alpha: 0.3) !important;
+          padding: 3px 10px !important;
+          a {
+            font-size: 14px !important;
+            color: #402d5d !important;
+          }
+          &:hover {
+            background: #402d5d !important;
+            > a {
+              color: #fff !important;
+            }
+          }
+        }
+        li.com-filho {
+          > a {
+            i {
+              margin: 0;
+              top: 50% !important;
+              transform: translateY(-50%);
+              right: 0 !important;
+              background: transparent;
+              background-color: transparent !important;
+              &::before {
+                color: #402d5d;
+              }
+            }
+          }
+        }
+      }
     }
     ul {
       width: 100%;
@@ -102,45 +147,7 @@ ul.nivel-dois {
   }
 }
 
-ul.nivel-tres {
-  background-color: transparent !important;
-  box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
-  li {
-    border-color: rgba($color: #000000, $alpha: 0.2);
-    border-style: solid;
-    border-top-width: 0 !important;
-    border-right-width: 0 !important;
-    border-bottom-width: 1px !important;
-    border-left-width: 0 !important;
-    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.3) !important;
-    padding: 3px 10px !important;
-    a {
-      font-size: 14px !important;
-      color: #402d5d !important;
-    }
-    &:hover {
-      background: #402d5d !important;
-      > a {
-        color: #fff !important;
-      }
-    }
-  }
-  li.com-filho {
-    > a {
-      i {
-        margin: 0;
-        top: 50% !important;
-        transform: translateY(-50%);
-        right: 0 !important;
-        background: transparent;
-        background-color: transparent !important;
-        &::before {
-          color: #402d5d;
-        }
-      }
-    }
-  }
-}
+
 
 @media (max-width: 678px) {
   div[class="content-menu-mobile"] .open-menu {
@@ -240,7 +247,6 @@ ul.nivel-tres {
     }
     ul.nivelDois,
     ul.nivelTres {
-      display: none;
       
       > li {
         a.menu-active {
