--- a/src/components/Header/MenuSuperior/style.scss
+++ b/src/components/Header/MenuSuperior/style.scss
@@ -16,15 +16,17 @@ ul.nivel-um {
   &::after {
     display: none;
   }
-  a {
-    font-family: $font-2!important;
-    font-weight: 600;
-  }
+  
   > li {
     position: unset !important;
     border: 0 !important;
     padding: 0;
     margin: 0 !important;
+    > a {
+      font-family: $font-2 !important;
+      font-size: 15px !important;
+      font-weight: 600!important;
+    }
     &:hover {
       background-color: #eadfff !important;
       a {
@@ -37,7 +39,7 @@ ul.nivel-um {
       padding: 0 10px;
       strong.titulo {
         color: #fff;
-        font-family: $font-2!important;
+        font-family: $font-2 !important;
         font-weight: 400;
       }
     }
@@ -63,21 +65,24 @@ ul.nivel-um {
 }
 
 ul.nivel-dois {
-  left: auto!important;
-  min-width: auto!important;
+  left: auto !important;
+  min-width: auto !important;
   height: 400px;
   overflow-y: scroll;
-  background: rgba($color: #e3e6f8, $alpha: 0.95) !important;
-  padding: 20px !important;
+  padding: 20px 30px !important;
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
+
   > li {
     background: transparent !important;
-    width: 150px !important;
     padding: 0;
+    border: 0!important;
     > a {
-      background: #402d5d !important;
-      color: #fff !important;
+      font-family: $font-1 !important;
+      color: #402d5d !important;
       padding: 0 10px;
-      font-size: 13px;
+      font-size: 13px!important;
+      text-transform: uppercase;
+      font-weight: 700;
       display: flex;
       flex-direction: row-reverse;
       align-items: center;
@@ -86,47 +91,71 @@ ul.nivel-dois {
       margin: 0 !important;
       display: block;
       i {
+        display: none !important;
         margin: 0;
         right: 10px !important;
         top: 0;
         background: transparent !important;
       }
     }
+    ul.nivel-tres {
+      li[class*="com-filho"] {
+        > a {
+          font-weight: 800!important;
+        }
+      }
+    }
     > ul.nivel-tres {
-      position: relative!important;
+      position: relative !important;
       width: 100%;
       position: relative;
-      display: block!important;
+      display: block !important;
       left: 0;
-      ul.nivel-tres {
-        left: 0!important;
-        position: relative!important;
-        display: block!important;
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
+
+      i {
+        display: none !important;
+      }
+      li {
+        padding-left: 10px !important;
         background-color: transparent !important;
+        border: 0!important;
+        a {
+          font-family: $font-1 !important;
+          font-size: 13px !important;
+          color: #402d5d !important;
+          font-family: $font-1 !important;
+        }
+      }
+      ul.nivel-tres {
         box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
+        left: 10px !important;
+        position: relative !important;
+        display: block !important;
+        background-color: transparent !important;
         li {
-          border-color: rgba($color: #000000, $alpha: 0.2);
-          border-style: solid;
-          border-top-width: 0 !important;
-          border-right-width: 0 !important;
-          border-bottom-width: 1px !important;
-          border-left-width: 0 !important;
-          border-bottom: 1px solid rgba($color: #000000, $alpha: 0.3) !important;
-          padding: 3px 10px !important;
-          a {
-            font-size: 14px !important;
+          padding: 3px 0 !important;
+          background-color: transparent;
+          border: 0!important;
+          > a {
+            font-size: 13px !important;
+            font-family: $font-1 !important;
             color: #402d5d !important;
+            font-family: $font-1 !important;
           }
           &:hover {
-            background: #402d5d !important;
+            background: transparent !important;
             > a {
-              color: #fff !important;
+              color: #402d5d !important;
             }
           }
         }
         li.com-filho {
+          background-color: transparent;
+          border: 0!important;
           > a {
             i {
+              display: none !important;
               margin: 0;
               top: 50% !important;
               transform: translateY(-50%);
@@ -147,8 +176,6 @@ ul.nivel-dois {
   }
 }
 
-
-
 @media (max-width: 678px) {
   div[class="content-menu-mobile"] .open-menu {
     display: block !important;
@@ -159,7 +186,7 @@ ul.nivel-dois {
     top: 43px;
     height: 70vh !important;
     z-index: 10;
-    background: #EADFFF !important;
+    background: #eadfff !important;
     display: none;
     padding: 0;
     border-radius: 0 21px 0 0;
@@ -172,20 +199,20 @@ ul.nivel-dois {
       > li.com-filho {
         > a {
           position: relative;
-           > i {
-              position: absolute;
-              right: 0;
-              width: 50px;
-              height: 40px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              top: 50%;
-              transform: translateY(-50%);
-              &::before {
-                margin-right: 0;
-              }
-           }
+          > i {
+            position: absolute;
+            right: 0;
+            width: 50px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            top: 50%;
+            transform: translateY(-50%);
+            &::before {
+              margin-right: 0;
+            }
+          }
         }
       }
     }
@@ -195,32 +222,33 @@ ul.nivel-dois {
       padding: 0 0 20px 0;
       margin-top: 30px;
       .buttonAccount {
-        margin-bottom: 20px!important;
-       a {
-        justify-content: flex-start!important;
-        gap: 10px;
-        font-weight: 700;
-        i {
-          width: 16px;
-          height: 18px;
-          background: url('https://cdn.awsli.com.br/2454/2454272/arquivos/user.svg') center center no-repeat;
-          background-size: contain;
+        margin-bottom: 20px !important;
+        a {
+          justify-content: flex-start !important;
+          gap: 10px;
+          font-weight: 700;
+          i {
+            width: 16px;
+            height: 18px;
+            background: url("https://cdn.awsli.com.br/2454/2454272/arquivos/user.svg")
+              center center no-repeat;
+            background-size: contain;
+          }
         }
-       } 
       }
       > li {
         padding: 0 10px;
         > a.menu-active {
-          background: #402d5d!important;
+          background: #402d5d !important;
           padding-left: 10px;
 
           strong {
-            color: #FFF!important;
+            color: #fff !important;
           }
           i {
-            color: #FFF!important;
+            color: #fff !important;
             &::before {
-              color: #FFF;
+              color: #fff;
               margin-right: 5px;
             }
           }
@@ -243,22 +271,21 @@ ul.nivel-dois {
       }
     }
     ul.submenu-open {
-      display: block!important;
+      display: block !important;
     }
     ul.nivelDois,
     ul.nivelTres {
-      
       > li {
         a.menu-active {
           font-weight: 800;
           i {
-            transition: all 0.5s ease!important;
+            transition: all 0.5s ease !important;
             transform: rotate(90deg);
-            top: 0!important;
+            top: 0 !important;
           }
         }
         a {
-          transition: all 0.5s!important;
+          transition: all 0.5s !important;
         }
         > a {
           color: #402d5d;
@@ -271,7 +298,7 @@ ul.nivel-dois {
           padding-left: 10px;
           i {
             margin-right: 15px;
-            transition: all 0.5s!important;
+            transition: all 0.5s !important;
             background: transparent;
             &::before {
               color: #402d5d;
@@ -279,10 +306,10 @@ ul.nivel-dois {
           }
         }
       }
-      >li.com-filho {
+      > li.com-filho {
         > a {
           display: flex;
-          justify-content: space-between!important;
+          justify-content: space-between !important;
           padding-left: 10px;
           i {
             background: transparent;
@@ -291,13 +318,13 @@ ul.nivel-dois {
             }
           }
         }
-      } 
+      }
     }
     ul[class*="nivelDois"] {
-      background:rgb(178, 146, 248)!important;
+      background: rgb(178, 146, 248) !important;
     }
     ul[class*="nivelTres"] {
-      background:rgb(207, 184, 255)!important;
+      background: rgb(207, 184, 255) !important;
       li {
         a {
           padding-left: 25px !important;
@@ -309,11 +336,13 @@ ul.nivel-dois {
   }
 }
 
-
-
-@media(max-width:768px) {
-  .ast-theme-transparent-header #masthead .site-logo-img .transparent-custom-logo .astra-logo-svg {
-    width: 200px!important;
-    max-width: 200px!important;
+@media (max-width: 768px) {
+  .ast-theme-transparent-header
+    #masthead
+    .site-logo-img
+    .transparent-custom-logo
+    .astra-logo-svg {
+    width: 200px !important;
+    max-width: 200px !important;
   }
 }
