--- a/src/globals.scss
+++ b/src/globals.scss
@@ -45,34 +45,33 @@ div[class="conteiner"] {
     .preco-a-partir {
       margin: 15px 0px;
       display: block;
-      span, strong {
-        font-size: 16px!important;
-        color: #000000!important;
+      span,
+      strong {
+        font-size: 16px !important;
+        color: #000000 !important;
       }
     }
   }
   .acoes-produto {
     a[class="botao botao-comprar principal"] {
       position: relative;
-      font-size: 0!important;
+      font-size: 0 !important;
       &:hover {
         &::before {
-          color: #FFF;
+          color: #fff;
           background: #402d5d;
-          
         }
       }
       &::before {
         position: absolute;
-        content: 'Fazer pedido';
+        content: "Fazer pedido";
         font-family: $font-2;
-        font-size: 14px!important;
+        font-size: 14px !important;
         font-weight: 600;
         color: #402d5d;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        
       }
     }
   }
@@ -81,21 +80,20 @@ div[class="conteiner"] {
       position: relative;
       height: 30px;
       span[class="titulo"] {
-        display:none!important
+        display: none !important;
       }
       &::before {
         position: absolute;
-        width: 100%!important;
-        text-align: center!important;
-        content: 'Fazer pedido';
+        width: 100% !important;
+        text-align: center !important;
+        content: "Fazer pedido";
         font-family: $font-2;
-        font-size: 14px!important;
+        font-size: 14px !important;
         font-weight: 600;
         color: #402d5d;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        
       }
     }
   }
@@ -106,9 +104,9 @@ div[class="conteiner"] {
 
 .produto-avise {
   .avise-me-list {
-    background-color: rgba($color: #1e103b, $alpha: .95)!important;
+    background-color: rgba($color: #1e103b, $alpha: 0.95) !important;
     span {
-      font-family: $font-1!important;
+      font-family: $font-1 !important;
     }
   }
 }
@@ -119,22 +117,22 @@ div[class="conteiner"] {
 }
 .bandeiras-produto:has(.bandeira-indisponivel) {
   display: flex;
-    justify-content: center;
-    width: 100%;
-    border: 0!important;
-    left: 0!important;
+  justify-content: center;
+  width: 100%;
+  border: 0 !important;
+  left: 0 !important;
   .bandeira-indisponivel {
     padding: 10px 30px;
     background-color: #1e103b;
-    color: #FFF!important;
-    border: 0!important;
+    color: #fff !important;
+    border: 0 !important;
     font-size: 13px;
   }
 }
 
 @media (max-width: 768px) {
   #cabecalho {
-    padding-top: 0!important;
+    padding-top: 0 !important;
   }
   .conteiner-principal {
   }
