--- a/src/pages/product/style.scss
+++ b/src/pages/product/style.scss
@@ -208,6 +208,32 @@ $font-2: "Cinzel", serif;
     }
   }
 }
+.pagina-produto:has(div.menu-user-logged[style="display: none;"]) {
+  .principal {
+    a.botao-comprar {
+      width: 300px;
+      height: 40px;
+      background: #402d5d;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-transform: uppercase;
+      font-size: 0;
+      &:before {
+        display: none!important;
+        content: "Adicionar ao carrinho";
+        font-size: 16px!important;
+        display: block;
+        color: #fff;
+        text-transform:uppercase;
+  
+      }
+      i.icon-shopping-cart {
+        display: none;
+      }
+    }
+  }
+}
 .comprar {
   float: none !important;
   text-align: unset !important;
@@ -240,7 +266,7 @@ $font-2: "Cinzel", serif;
       border-radius: 0;
     }
   }
-
+  
   a.botao-comprar {
     width: 300px;
     height: 40px;
@@ -431,6 +457,15 @@ form.avise-me-form {
       }
     }
   }
+}
+.favorite-button-product {
+  width: 100%;
+  height:30px;
+  display: block;
+  background: url("https://cdn.awsli.com.br/2454/2454272/arquivos/fav-stroke.svg")
+    center right no-repeat;
+  background-size: contain;
+  z-index: 50;
 }
 
 @media (max-width: 768px) {
