--- a/src/components/Header/MenuSuperior/style.scss
+++ b/src/components/Header/MenuSuperior/style.scss
@@ -71,7 +71,7 @@ ul.nivel-dois {
   overflow-y: scroll;
   padding: 20px 30px !important;
   box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
-
+  background-color: #eadfff!important;
   > li {
     background: transparent !important;
     padding: 0;
@@ -99,6 +99,7 @@ ul.nivel-dois {
       }
     }
     ul.nivel-tres {
+      background-color: #eadfff!important;
       li[class*="com-filho"] {
         > a {
           font-weight: 800!important;
@@ -112,6 +113,7 @@ ul.nivel-dois {
       display: block !important;
       left: 0;
       box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
+      background-color: #eadfff!important;
 
       i {
         display: none !important;
